# alert-watcher2

./: .dockerignore  .gitignore  .uvignore  CHANGES.md  Dockerfile  Dockerfile.uv  FIXES_APPLIED.md  Makefile  PRD.md  README.md  SIMPLIFICATION_SUMMARY.md  TODO.md  demo_naming.py  final_verification.py  main.py  pyproject.toml  requirements.txt  run_agent.py  run_example.py  test_region_buffering_comprehensive.sh  test_simplified.py  test_simplified_cratedb.py  test_temporal_minimal.py  test_webhook_alerts.py  verify_endpoint.py  verify_working.py
deploy/: README.md  build-and-deploy.sh  deployment.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  service.yaml
prometheus/: alerts.yaml
simple_agent/: k8s_activities.py  test_simple.py  worker.py  workflows.py
src/: flanker.py
src/alert_buffer/: __init__.py  manager.py  models.py  storage.py
src/alert_watcher/: __init__.py  activities.py  config.py  main.py  models.py  signals.py  webhook.py  workflows.py
src/alert_watcher_agent/: __init__.py  activities.py  config.py  main.py  models.py  workflows.py
src/crash_dump_uploader/: __init__.py  activities.py  models.py  workflows.py
src/file_uploader/: __init__.py  activities.py  models.py  utils.py
